# MLInsight

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTION  LICENSE  README.md  buildPerfetto.sh  compile-pytorch.sh  diff.printDetailedObjects  mlinsight.pfconfig  patch.MemPilot.trace  pyproject.toml  python-gdb-frame.py  setup.py
Loader/: CMakeLists.txt
Loader/include/: Logging.h
Loader/src/: Logging.cpp  main.cpp
Runtime/: CMakeLists.txt
Runtime/include/analyse/: CallBackInterface.h  CommonMemory.h  DebugAnalyzer.h  DriverMemory.h  FlameGraph.h  GlobalVariables.h  LogicalClock.h  MemIncrementalAnalyzer.h  PerfettoTensorTraceAnalyzer.h  PieChartAnalyzer.h  PieChartAttributor.h  PytorchMemory.h  SerializationDataStructure.h  TensorMap.h
Runtime/include/analyse/MemLeak/: MemLeakAnalyzer.h  MemLeakMetrics.h  MemoryLeakMetrics_Pytorch.h  MemoryLeakMetrics_Tensorflow.h
Runtime/include/common/: Array.h  CUDAHelper.h  CallStack.h  Config.h  DependencyLibVersionSpecifier.h  ELFParser.h  HashAndCompareFunctions.h  HashMap.h  LazyValueType.h  LinkedList.h  Logging.h  MemoryHeap.h  ProcInfoParser.h  RingBuffer.h  SpinLock.h  TensorObj.h  Tool.h
Runtime/include/trace/hook/: HookContext.h  HookHandlers.h  HookInstaller.h  PyHook.h
Runtime/include/trace/proxy/: CUDAProxy.h  DLProxy.h  GPUEventTrace.h  LibcProxy.h  PthreadProxy.h  PyTorchCallBacks.h  PythonModuleDef.h  PytorchMemProxy.h  SystemProxy.h  TensorflowMemProxy.h
Runtime/include/trace/tool/: AssemblyTool.h  AtomicSpinLock.h  MLInsightPyAPI.h  Math.h  Perfetto.h
Runtime/include/trace/type/: ELFInfo.h  PyCodeExtra.h  RecordingDataStructure.h
Runtime/src/analyse/: DebugAnalyzer.cpp  DriverMemory.cpp  GlobalVariable.cpp  MemIncrementalAnalyzer.cpp  MemLeakAnalyzer.cpp  PerfettoTensorTraceAnalyzer.cpp  PytorchMemory.cpp  TensorObj.cpp
Runtime/src/common/: CallStack.cpp  ElfParser.cpp  Logging.cpp  ProcInfoParser.cpp  Tool.cpp
Runtime/src/debugTool/: MLInsightCallStackAnalysis.py
Runtime/src/trace/: APIHookHandlers.cpp  CUDAProxy.cpp  DLProxy.cpp  GPUTrace.cpp  HookContext.cpp  HookInstaller.cpp  LibcProxy.cpp  Perfetto.cpp  PthreadProxy.cpp  PyCodeExtra.cpp  PyHook.cpp  PyTorchCallbacks.cpp  PytorchMemProxy.cpp  SystemProxy.cpp  TensorflowMemProxy.cpp
Runtime/tests/: CMakeLists.txt
Runtime/tests/lib/FunctionCall/: FuncWithDiffParms.cpp
Runtime/tests/lib/FunctionCall/include/: FuncWithDiffParms.h  TenThousandFunc.h
Runtime/tests/src/demoapps/: TestBinaryAccess.cpp  TestComplexThreadOps.cpp  TestExceptions.cpp  TestFuncCall.cpp  TestFuncCallDelay.cpp  TestHookEverything.cpp  TestInlineFunction.cpp  TestInstall.cpp  TestNestedFuncCallPthread.cpp  TestNestingCall.cpp  TestPthread.cpp  TestSemaphore.cpp  TestSimpleFuncCall.cpp  TestSingalHandler.cpp  TestStdThread.cpp  TestTLS.cpp  TestThreadInterleave.cpp  TestThreadJoin.cpp  TestThreadLocalAssembly.cpp  TestThreadSimultaenouslyEnd.cpp  TestTimingAccuracy.cpp  TimingAccuracyResultsAnalysis.py  debugTestFuncCall.py  libWorkload.cpp
Runtime/tests/src/demoapps/include/: libWorkload.h
Runtime/tests/src/demoapps/python/: CMakeLists.txt  pyproject.toml  setup.py
Runtime/tests/src/demoapps/python/InterModuleFuncCall/: InvokeFunction.py
Runtime/tests/src/demoapps/python/InterModuleFuncCall/ModuleA/: __init__.py
Runtime/tests/src/demoapps/python/InterModuleFuncCall/ModuleB/: __init__.py
Runtime/tests/src/demoapps/python/lib/CallFunctionCall/: CallFunctionCall.cpp
Runtime/tests/src/demoapps/python/lib/CallFunctionCall/include/: CallFunctionCall.h
Runtime/tests/src/demoapps/python/lib/FunctionCall/: FuncWithDiffParms.cpp  TenThousandFunc.cpp
Runtime/tests/src/demoapps/python/lib/FunctionCall/include/: FuncWithDiffParms.h
Runtime/tests/src/demoapps/python/numpy/: ArrayAddition.py  Exponent.py
Runtime/tests/src/demoapps/python/pytorch/: TestImportTorch.py  debugTestImportTorch.py
Runtime/tests/src/demoapps/python/testextensionmodule/: NativeFuncCallWrapper.cpp  __init__.py
Runtime/tests/src/unittests/: TestArray.cpp  TestFlameGraph.cpp  TestHashMap.cpp  TestLazyValue.cpp  TestLinkedList.cpp  TestObjectPool.cpp  TestRingBuffer.cpp
demo/: allocateOneTensor.py  leak.py  oom_insufficient.py  run.sh
demo/deepspeed/: run_ds_ml.sh  train_ds_opt.py
demo/deepspeed/configs/: 350m.json
demo/deepspeed/ds_configs/: stage3-offload.json  stage3.json
